--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -215,13 +215,13 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <th>Notes</th>
 <th>Costs/Supplier</th>
 </tr>
-<div style="max-width:80%;">Excitation path optics are assembled on a breadboard to bring the beam height up without a periscope. <br>A beam height of 64.7mm above the breadboard will match the main cube opening hole 117.4mm above the main optical table.<br>
+<div style="max-width:80%;">Excitation path optics are assembled on a breadboard to bring the beam height up without a periscope. <br>A beam height of 65mm above the breadboard will match the main cube opening hole 117.4mm above the main optical table.<br>
 The excitation path is optimized for a flat-top profile illumination of the whole 221um-by-221um field of view.</div>
 <tr>
 <td>1</td> <!--id-->
 <td id="fancyboxtitle_20">Breadboard</td> <!--title-->
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=MB4560/M">MB4560/M</a> breadboard on 
-<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PS10M">PS10M</a> spacers.</div></td> <!--description-->
+<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=P30/M">P30/M</a> posts</a>, and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=PS10M">PS10M</a> spacers milled to 9.7mm height.</div></td> <!--description-->
 <td><img src="images/breadboard.jpg" class="fancybox" id=20></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">500€<br>Thorlabs</td> <!--costs-->
@@ -269,7 +269,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <tr>
 <td>7</td> <!--id-->
 <td id="fancyboxtitle_25">2.5x beam expander</td> <!--title-->
-<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a cage system with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 64.7mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S5/M">BA2S5/M</a>).</td> <!--description-->
+<td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-100-A">AC254-100-A</a> 100mm and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=ACN254-040-A">ACN254-040-A</a> -40mm lenses in a 30mm cage system (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP33/M">CP33/M cage plate</a>)with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a> mounts and a <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KB25/M">KB25/M</a> kinematic base</div>Magnifies the beam diameter 2.5fold and can be easily swapped or removed due to its magnetic kinematic base. Raised up to 65mm beam height with standard adapter plates (<a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S7/M">BA2S7/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S5/M">BA2S5/M</a>, <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S2/M">BA2S2/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=BA2S1/M">BA2S1/M</a>.).</td> <!--description-->
 <td><img src="images/telescope.png" class="fancybox" id=25></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">405€<br>Thorlabs</td> <!--costs-->
