--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -98,8 +98,8 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <tr class="homemade">
 <td>3</td> <!--id-->
 <td id="fancyboxtitle_3">Sample holder</td> <!--title-->
-<td><div class="discTitle">CNC milled - <a href="drawings/sampleholder.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place</td> <!--description-->
-<td><img src="images/sampleholder.png" class="fancybox" id=3></td></td> <!--image-->
+<td><div class="discTitle">CNC milled - <a href="drawings/sampleholder_updated.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place, and <a href="drawings/sampleholder_insert_updated.pdf">insert</a> for smaller square samples (22x22mm)</td> <!--description-->
+<td><img src="images/samples.png" class="fancybox" id=3></td></td> <!--image-->
 <td style="vertical-align: middle;">Smaract piezo stage is tared with respect to sample holder weight by adding a constant force spring during stage assembly.</td> <!--notes-->
 <td style="vertical-align: middle;">100€<br>in-house</td> <!--costs-->
 </tr>
