--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -98,7 +98,7 @@ If required, the cube can be mirrored and used with excitation coming from the l
 <tr class="homemade">
 <td>3</td> <!--id-->
 <td id="fancyboxtitle_3">Sample holder</td> <!--title-->
-<td><div class="discTitle">CNC milled - <a href="drawings/sampleholder_updated.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place, and <a href="drawings/sampleholder_insert_updated.pdf">insert</a> for smaller square samples (22x22mm)</td> <!--description-->
+<td><div class="discTitle">CNC milled - <a href="drawings/sampleholder_updated.pdf">Technical drawing</a></div> Sample holder for standard coverslips (22x60mm, 26x76mm) with magnets to keep sample in place, and <a href="drawings/sampleholder_insert_updated.pdf">insert (Technical drawing)</a> for smaller square samples (22x22mm)</td> <!--description-->
 <td><img src="images/samples.png" class="fancybox" id=3></td></td> <!--image-->
 <td style="vertical-align: middle;">Smaract piezo stage is tared with respect to sample holder weight by adding a constant force spring during stage assembly.</td> <!--notes-->
 <td style="vertical-align: middle;">100€<br>in-house</td> <!--costs-->
@@ -292,14 +292,14 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td>10</td> <!--id-->
 <td id="fancyboxtitle_28">TIRF angle cage assembly</td> <!--title-->
 <td><div class="discTitle">Thorlabs - Right-angle elliptical mirror mount <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=KCB1E/M">KCB1E/M</a> and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1Q">CXY1Q</a> mount on cage rods. 
-</div>Mounting mirror and lens onto one assembly allows to keep the focal point of the TIRF lens to overlap with the objective's back focal plane for all incident angles.</td> <!--description-->
+</div>Mounting mirror and lens on one assembly allows keeping the focal point of the TIRF lens overlapping with the objective's back focal plane for all incident angles.</td> <!--description-->
 <td><img src="images/stageassembly.png" class="fancybox" id=28></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">420€<br>Thorlabs</td> <!--costs-->
 </tr>
 <td class="homemade">11</td> <!--id-->
 <td id="fancyboxtitle_29">Cage assembly adapter plate</td> <!--title-->
-<td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised to 64.7mm beam height.</td> <!--description-->
+<td><div class="discTitle">CNC-milled - <a href="drawings/kmts25e_adapter.pdf">Technical drawing</a></div>Cage assembly is mounted onto the plate with with <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CP02B"> CP02B mounting brackets</a>  and raised by 14.3mm to 65mm beam height.</td> <!--description-->
 <td><img src="images/kmts25e_adapter.png" class="fancybox" id=29></td> <!--image-->
 <td></td> <!--notes-->
 <td style="vertical-align: middle;">20€<br>in-house</td> <!--costs-->
