--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -145,9 +145,10 @@ The real text begins here.
   <span class="dot" onclick="currentSlide(12)"></span> 
 </div>
 
-<div style="max-width:80%;">The microscope was designed and set up during the PhD project of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer</a>, supervised by <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. 
-It was designed specifically to be the main tool for all surface-based fluorescence imaging in the group <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a>. Developing and setting up the microscope was strongly supported by AMOLF's in-house engineering teams and the <a href="https://amolf.nl/infrastructure-group/precision-manufacturing">precision manufacturing workshop</a>:</div>
-
+<div style="max-width:80%;">The K2 TIRF microscope was designed and constructed as part of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer's</a> PhD project, 
+under the supervision of <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. It was specifically intended to serve as the 
+primary tool for TIRF microscopy in the <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> group. 
+The development and setup of the microscope was supported by AMOLF's in-house engineering teams and precision manufacturing workshop.</a>:</div>
 
 
 <div id="container">
@@ -159,7 +160,7 @@ It was designed specifically to be the main tool for all surface-based fluoresce
 <tr><td><a href="https://amolf.nl/people/marco-seynen">Marco Seynen</a></td><td><a href="https://jhohlbein.com/">Johannes Hohlbein</a></td></tr>
 <tr><td><a href="https://amolf.nl/people/marko-kamp">Marko Kamp</a></td><td>Philipp Blumhardt</td></tr>
 <tr><td><a href="https://amolf.nl/people/hinco-schoenmaker">Hinco Schoenmaker</a> </td></tr>
-<tr><td><a href="https://amolf.nl/people/jan-zomerdijk">Jan Zomerdijk</a></td></tr>
+<tr><td>Jan Zomerdijk</td></tr>
 <tr><td><a href="https://amolf.nl/people/henk-jan-boluijt">Henk-Jan Boluijt</a> </td></tr>
 <tr><td>Marnix Verweij</td></tr>
 <tr><td><a href="https://amolf.nl/people/bob-krijger">Bob Krijger</a></td></tr>
