updated optical path

--- a/K2TIRF/component_table.html
+++ b/K2TIRF/component_table.html
@@ -62,7 +62,7 @@ Please note that standard mirrors and mounts, posts, clamps, rails, cage rods, s
 <br>
 
 <figure style="max-width:900px;">
-<a href="images/K2_optical_path.png">
+<a href="images/K2_optical_path_3x.png">
 <img src="images/K2_optical_path.png" style="width:100%; padding-left:5%; "></a>
 <figcaption><strong>Fig 1</strong>: Overview of the optical path of the K2 TIRF. The individual components are explained in detail in the tables. 
 Schematic adapted from <a href="https://pubs.acs.org/doi/abs/10.1021/acs.nanolett.8b00875">Mücksch, Blumhardt et al.</a> </figcaption>
@@ -311,7 +311,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 <td><div class="discTitle">Thorlabs - <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=AC254-250-A">AC254-250-A</a></div>TIRF lens in CXY1Q mount (alternative: <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=CXY1A">CXY1A</a>) to focus excitation light on back-focal plane of objective. 250mm focal length.</td> <!--description-->
 <td><img src="images/tirflens.png" class="fancybox" id=30></td> <!--image-->
 <td></td> <!--notes-->
-<td style="vertical-align: middle;">76€<br>Thorlabs</td> <!--costs-->
+<td style="vertical-align: middle;">160€<br>Thorlabs</td> <!--costs-->
 </tr>
 </table>
 
@@ -331,7 +331,7 @@ The excitation path is optimized for a flat-top profile illumination of the whol
 Cage system is mounted via Thorlabs <a href="https://www.thorlabs.de/thorproduct.cfm?partnumber=AE4E6M">AE4E6M</a> thread adapter and <a href="https://www.thorlabs.com/thorproduct.cfm?partnumber=LCP01/M">LCP01/M</a> cage plate.</td> <!--description-->
 <td><img src="images/tubelens.png" class="fancybox" id=39></td> <!--image-->
 <td><img src="images/tubelens_assembly.png" class="fancybox" id=40>Cage plate doubles as a mount for an alignment target.</td> <!--notes-->
-<td style="vertical-align: middle;">725€<br>Thorlabs</td> <!--costs-->
+<td style="vertical-align: middle;">780€<br>Thorlabs</td> <!--costs-->
 </tr>
 <tr>
 <td class="homemade">2</td> <!--id-->
@@ -540,7 +540,7 @@ Alignment tips:<br>
 <td><div class="discTitle">Hübner Photonics - <a href="https://hubner-photonics.com/products/lasers/laser-combiners/c-flex/">C-FLEX with AOM for the 561nm DPSSL laser</a></div>405nm (140mW), 488nm (200mW), 561nm (220mW) and 638nm (195mW)</td> <!--description-->
 <td><img src="images/cflex.png" class="fancybox" id=71></td> <!--image-->
 <td></td> <!--notes-->
-<td style="vertical-align: middle;">40.000€<br>Hübner Photonics</td> <!--costs-->
+<td style="vertical-align: middle;">~35.000€<br>Hübner Photonics</td> <!--costs-->
 </tr>
 <tr>
 <td>3</td> <!--id-->
