--- a/K2TIRF/about.html
+++ b/K2TIRF/about.html
@@ -145,9 +145,9 @@ The real text begins here.
   <span class="dot" onclick="currentSlide(12)"></span> 
 </div>
 
-<div style="max-width:80%;">The K2 TIRF microscope was designed and constructed as part of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer's</a> PhD project, 
-under the supervision of <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF. It was specifically intended to serve as the 
-primary tool for TIRF microscopy in the <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> group. 
+<div style="max-width:75%;">The K2 TIRF microscope was designed and constructed as part of <a href="https://amolf.nl/people/christian-niederauer"> Christian Niederauer's</a> PhD project, 
+under the supervision of <a href="https://amolf.nl/people/kristina-ganzinger">Dr. Kristina Ganzinger</a> at AMOLF.<br>
+It is specifically intended to serve as the primary tool for TIRF microscopy in the <a href="https://amolf.nl/research-groups/physics-of-cellular-interactions">Physics of Cellular Interactions</a> group. 
 The development and setup of the microscope was supported by AMOLF's in-house engineering teams and precision manufacturing workshop.</a>:</div>
 
 
