updated hardwarex paper

--- a/K2TIRF/index.html
+++ b/K2TIRF/index.html
@@ -58,8 +58,9 @@ These projects can be combined with each other or with commercial solutions, dep
 <br>
 In our multicolor single-molecule TIRF microscope 'K2' we opt for commercial solutions for parts which don't need the maximum flexibility, and are cheaper or much faster obtained than a comparable custom-made solution. <br>
 Whenever available, we base our custom-made solutions on existing open-source projects to save time and costs in the instrument development process.<br>
-More information, including detailed step-by-step build instructions are available in our preprint <br>
-<a href="https://www.biorxiv.org/content/10.1101/2022.12.19.521031v2">C. Niederauer, M. Seynen, J. Zomerdijk, M. Kamp, K. A. Ganzinger, <br>The K2: Open-source simultaneous triple-color TIRF microscope for live-cell and single-molecule imaging (bioRxiv, 2022)</a>
+More information, including detailed step-by-step build instructions are available in our publication:<br>
+<a href="https://www.hardware-x.com/article/S2468-0672(23)00011-1">C. Niederauer, M. Seynen, J. Zomerdijk, M. Kamp, K. A. Ganzinger, <br>The K2: Open-source simultaneous triple-color TIRF microscope for live-cell and single-molecule imaging (HardwareX, 2023)</a>
+
 </div>
 <br>
 <div class="container">
